# jackal_robot

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  dependencies.repos  jackal_hardware.xml  package.xml  rosinstall
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  feature.md
include/jackal_hardware/: jackal_hardware.hpp  jackal_hardware_interface.hpp
jackal_base/: CHANGELOG.rst  CMakeLists.txt  jackal_hardware.xml  package.xml
jackal_base/config/: base.yaml  diagnostic_analyzers.yaml  imu_compass.yaml  localization_analyzers.yaml
jackal_base/env-hooks/: 50.jackal_find_mag_config.bat  50.jackal_find_mag_config.sh
jackal_base/include/jackal_base/: jackal_base.hpp  jackal_diagnostic_updater.h  jackal_hardware.h  jackal_hardware.hpp  jackal_hardware_interface.hpp  sensor_frame_node.h
jackal_base/launch/: base.launch  base.launch.py  bringup.launch.py
jackal_base/scripts/: calibrate_compass  calibrate_compass.bat  compute_calibration
jackal_base/src/: jackal_base.cpp  jackal_diagnostic_updater.cpp  jackal_hardware.cpp  jackal_hardware_interface.cpp  sensor_frame_node.cpp
jackal_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
jackal_bringup/config/: microstrain.yaml
jackal_bringup/debian/: udev
jackal_bringup/launch/: README.md  accessories.launch  accessories.launch.save  accessories.launch.save.1  mcu.launch  teleop.launch
jackal_bringup/scripts/: install  set-wireless-interface
jackal_bringup/src/jackal_bringup/: navsat_rtk_relay.py
jackal_bringup/src/jackal_bringup/multicast/: Receiver.py  Sender.py  daemonize.py  network.py
jackal_robot/: CHANGELOG.rst  diagnostics_updater  package.xml
launch/: accessories.launch.py  bringup.launch.py  diagnostics.launch.py
scripts/: install  uninstall
src/: jackal_hardware.cpp  jackal_hardware_interface.cpp
