<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackal_robot</name>
  <version>1.0.1</version>
  <description>Jackal's mobility and sensor base.</description>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>diagnostic_updater</depend>
  <depend>hardware_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>jackal_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>jackal_control</exec_depend>
  <exec_depend>jackal_description</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>wireless_watcher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
