<?xml version="1.0"?>
<package>
  <name>jackal_bringup</name>
  <version>0.0.0</version>
  <description>Launchfiles and scripts for bringing up Jackal's robot software.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Jackal</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>jackal_msgs</run_depend>
  <run_depend>jackal_teleop</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>rosserial_server</run_depend>

  <export>
  </export>
</package>
