<?xml version="1.0"?>
<package>
  <name>jackal_bringup</name>
  <version>0.2.2</version>
  <description>Scripts for installing Jackal's robot software.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/Robots/Jackal</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>jackal_base</run_depend>
  <run_depend>robot_upstart</run_depend>

  <export>
  </export>
</package>
